# AlgoNet

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ControlPanel.jsx  NetworkCanvas.jsx  PacketLog.jsx  RoutingTable.jsx  StatsPanel.jsx
frontend/src/hooks/: useSimulator.js
frontend/src/services/: api.js
simulator/: CMakeLists.txt
simulator/src/: main.cpp
simulator/src/algorithms/: Dijkstra.cpp  Dijkstra.h
simulator/src/api/: Server.cpp
simulator/src/core/: Graph.cpp  Graph.h  Packet.h  Router.h
simulator/src/simulator/: NetworkSimulator.cpp  NetworkSimulator.h
